# Euka-Survey

./: .gitignore  CLAUDE.md  README.md  REFACTORING_AUDIT.md  REFACTORING_CHANGELOG.md  UI_IMPROVEMENT_PLAN.md  app.py  environment.yml  packages.txt  pyproject.toml  pytest.ini
.github/workflows/: update_db.yml
.streamlit/: config.toml
db_builder/: pipeline_build_db.py  precompute_aggregations.py  precompute_taxa.py
db_builder/build_db/: build_database.py  get_annotations.py  get_assemblies.py  get_reads.py
docs/: ARCHITECTURE.md  DEVELOPMENT.md  PIPELINE.md
src/: cache.py  constants.py  database.py  ete_utils.py  metrics.py  taxonomy.py  utils.py  visualization.py  wikipedia.py
tests/: conftest.py  test_aggregations.py  test_constants.py  test_database.py  test_ena_smoke.py  test_ete_utils.py  test_filter_sort_limit.py  test_metrics.py  test_pipeline_snapshots.py  test_schema_version.py  test_taxonomy.py
ui/: __init__.py  export.py  query_config.py  sidebar.py  state.py  summary.py  tree.py
